--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ button{
 }
 
 h3{
-    padding:10px
+    padding:10px;
+    font-family: 'Young Serif';
 }
 
 div.container{
@@ -71,3 +72,11 @@ div.f{
 .Poseidon-3-hsla { color: hsla(170, 52, 52, 1); }
 .Poseidon-4-hsla { color: hsla(197, 76, 30, 1); }
 .Poseidon-5-hsla { color: hsla(200, 96, 9, 1); }
+
+h1, h2{
+        font-family: 'Tangerine', serif;    
+}
+span{
+    font-family: Arial, sans-serif;
+    color: rgba(18, 103, 138, 1);
+}
