--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ input[type=number] {
 button{
     padding: 10px;
     margin: 15px;
-    background-color: rgba( 163, 163, 162);
+    background-color: rgba( 0, 32, 48);
     color: #E0E1E0 ;
     border-radius: 8px;
     box-shadow: -5px 5px 10px rgba(100,100,100,0.5);
@@ -79,4 +79,8 @@ h1, h2{
 span{
     font-family: Arial, sans-serif;
     color: rgba(18, 103, 138, 1);
+}
+button#borrar{
+    background-color:rgba(163, 163, 162);
+    color: #012030;
 }
